--- a/lecture13/Makefile
+++ b/lecture13/Makefile
@@ -1,8 +1,9 @@
 CC := gcc
+CFLAGS := -Wall
 
 .PHONY: default
 .PRECIOUS: %.o %.text.bin %.out
 default: learn_mmap.out
 
 %.out: %.c
-	$(CC) -o $@ $<
+	$(CC) $(CFLAGS) -o $@ $<
